# Morpheus_AI

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  schwab_authenticate.py  start_morpheus.bat  start_morpheus.ps1  start_spine.bat  start_spine.ps1
data/: morpheus.db  persistent_watchlist.json  runtime_config.json
docs/: CONTINUATION_2026-02-01.md
morpheus/: __init__.py
morpheus/ai/: __init__.py  momentum_engine.py
morpheus/analysis/: __init__.py  ignition_playbook.py  playbook_report.py
morpheus/broker/: __init__.py  schwab_auth.py  schwab_market.py  schwab_stream.py  schwab_trading.py
morpheus/classify/: __init__.py  classifier.py  config.py  types.py
morpheus/core/: __init__.py  bot_identity.py  config.py  event_sink.py  events.py  market_mode.py  mass_config.py  replay.py  runtime_config.py  symbol_state.py  time_authority.py  trade_fsm.py  validation_mode.py
morpheus/data/: __init__.py  candle_aggregator.py  market_snapshot.py
morpheus/evolve/: __init__.py  tracker.py  (+2 more)
reports/: 2026-02-02_issues_and_session_report.md  2026-02-03_chatgpt_update.md  2026-02-03_session_report.md  2026-02-05_fix_list.md
scripts/: batch_premarket_replay.py  generate_master_playbook.py  validate_premarket_momentum.py
tests/: __init__.py  test_confirmation_guard.py  test_execution.py  test_feature_engine.py  test_indicators.py  test_market_snapshot.py  test_regime_detector.py  test_replay_determinism.py  test_risk.py  test_rolling_stats.py  test_scheduler.py  test_schwab_auth.py  test_scoring.py  test_strategies.py  test_strategy_router.py  test_trade_fsm.py
(+105 files in other folders)
